# fitstojpg

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  defaults.ac
doc/: Makefile.am  Makefile.in  fitstojpg.info  fitstojpg.texi  stamp-vti  version.texi
src/: Makefile.am  Makefile.in  allextensions.sh  argpparser.h  arr2jpg.c  arr2jpg.h  arraymanip.c  arraymanip.h  basic.sh  borders.sh  crop.sh  fitsarrayvv.c  fitsarrayvv.h  fluxtrunc.sh  main.c  main.h  mock.fits  stats.c  stats.h  ui.c  ui.h
